
addw: Tue 25 Mar 2003 13:21
README:	Initial Create.

addw: Tue 25 Mar 2003 13:22
MANIFEST:	Initial Create.

addw: Tue 25 Mar 2003 13:22
Expression.pm: Update documentation

addw: Tue 25 Mar 2003 13:23
TestExpr.pl: Add copyright & print version number.
Renamed as test.pl


addw: Tue 25 Mar 2003 13:24
test.pl: Note change of name;

addw: Tue 25 Mar 2003 13:47
README: Allow for different version numbers between README and the module itself.
Rename as README.in.


addw: Tue 25 Mar 2003 13:56
MANIFEST: Add TODO

addw: Tue 25 Mar 2003 14:10
TODO:	Initial Create.

addw: Tue 25 Mar 2003 14:16
test.pl: Changed $Version to $VERSION

addw: Tue 25 Mar 2003 14:24
Expression.pm: If an operand to '.' is undef, treat as empty.

addw: Tue 25 Mar 2003 14:50
Expression.pm: Dummy change just to bumb the version number - packaging didn't quite work right.

addw: Tue 25 Mar 2003 14:56
BuildDistribution.sh:	Initial Create.

addw: Wed 26 Mar 2003 21:43
Expression.pm: Add auto init feature/option

addw: Wed 26 Mar 2003 21:49
Expression.pm: Document the last change - AutoInit

addw: Thu 27 Mar 2003 10:42
MANIFEST: Add a few more files
README.in: Add copyright release.
TODO: Add copyright release.

addw: Thu 08 Apr 2004 18:12
Expression.pm: Implement monadic +-~!, exponent op '**', floats of form 123E21 and abs function.
test.pl: Test implementation of monadic +-~!, exponent op '**', floats of form 123E21 and abs function.
	Option to print the tree after an error.

addw: Mon 05 Mar 2007 13:12
test.t: Move from test.pl to t/test.t
	Change to work with the current testing framework.
MANIFEST: Change where the test script lives
README.in: Talk about new location for test script

addw: Mon 05 Mar 2007 14:38
test.t: Be parsimonious on the use of POSIX, comment out a comment!
Credits:	Initial Create.
Credits: Add Alexandr Ciornii as a tester
Makefile.PL: Add LICENSE
Expression.pm: Be parsimonious on the use of POSIX.

addw: Tue 06 Mar 2007 08:34
Expression.pm: Just to increment version #