@@ -9,7 +9,7 @@ it under the same licence as the rest of the module. Contributions will
 be acknowledged.
 
 
-SCCS: @(#)Credits	1.2 03/05/07 14:40:44
+SCCS: @(#)Credits	1.3 01/03/08 16:30:17
 
 Developers
 **********      
@@ -19,6 +19,7 @@ Developers
 Testers
 *******
 "Alexandr Ciornii" <alexchorny@gmail.com>
+Doug Spencer <spencer@securitybulletins.com>
 
 
 
