@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Math-Expression
-version:      1.17
+version:      1.18
 version_from: Expression.pm
 installdirs:  site
 requires:
