@@ -1,4 +1,4 @@
-Math::Expression version 1.15
+Math::Expression version 1.18
 =============================
 
 This module solves the problem of evaluating expressions read from config/...
